<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/meeting_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailMeetingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
...
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:backgroundTint="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_detail"
            android:layout_width="394dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#3F51B5"
            android:gravity="center"
            android:text="DETAILS DE LA REUNION"
            android:textColor="@color/red"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.529"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sujet_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:text="sujet"
            android:textColor="@color/black"
            android:textSize="20sp"
...
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_detail" />

        <TextView
            android:id="@+id/salle_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:text="salle"
            android:textColor="@color/black"
            android:textSize="20sp"
...
